--- a/start_interface.html
+++ b/start_interface.html
@@ -4,7 +4,7 @@
     <title>Budget Calculator</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="./ui_styles.css" id="logo">
+    <link rel="stylesheet" href="./ui_styles.css">
 </head>
 <body>
     <h1 id="project_name">
