--- a/start_interface.html
+++ b/start_interface.html
@@ -13,7 +13,7 @@
         <br>
     </h1>
 
-    <form action="./budget_calc.php" method="post">
+    <form action="./budget_index.php" method="post">
         <div class="username_input">
             <label for="username">Full Name: </label><br>
             <input type="text" id="username" name="username" required>
