Added some confirmation for successful sign up

--- a/login_form.html
+++ b/login_form.html
@@ -21,8 +21,10 @@
         <input type="text" id="new_username" name="new_username" required>
     </div>
     <div class="new_password_input">
+        <input type="hidden" name="signedup" value="true">
         <label for="new_password">Password: </label><br>
         <input type="password" id="new_password" name="new_password" required>
     </div>
     <button type="submit">Sign-up</button>
+
 </form>
