Re-structured files
No idea how/if I can even merge this back into main

--- a/start_interface.html
+++ b/start_interface.html
@@ -10,10 +10,10 @@
 
 <body>
     <h1 id="project_name">
-        Budget Calculator <img class="logo" alt="money_logo" src="money_logo.jpg"><br>
+        Budget Calculator <img class="logo" alt="money_logo" src="assets/money_logo.jpg"><br>
         <p>~ We Judge You For Your Purchases ~</p>
     </h1>
-
+    <hr>
     <form action="./budget_index.php" method="post">
         <br>
         <div class="totalfunds_input">
