--- a/login_form.html
+++ b/login_form.html
@@ -2,6 +2,7 @@
     Login:
 </h3>
 <form action="./login_page.php" method="post">
+<link rel="stylesheet" href="ui_styles.css">
     <div class="username_input">
         <label for="username">Username: </label><br>
         <input type="text" id="username" name="username" required>
@@ -16,6 +17,7 @@
     New user? Sign-up:
 </h3>
 <form action="./login_page.php" method="post">
+    <link rel="stylesheet" href="ui_styles.css">
     <div class="new_username_input">
         <label for="new_username">Username: </label><br>
         <input type="text" id="new_username" name="new_username" required>
