--- a/login_form.html
+++ b/login_form.html
@@ -1,8 +1,8 @@
-<h3>
-    Login:
+<link rel="stylesheet" href="ui_styles.css">
+<h3
+style=" text-align:center"> Login:
 </h3>
 <form action="./login_page.php" method="post">
-<link rel="stylesheet" href="ui_styles.css">
     <div class="username_input">
         <label for="username">Username: </label><br>
         <input type="text" id="username" name="username" required>
@@ -13,8 +13,8 @@
     </div>
     <button type="submit">Login</button>
 </form>
-<h3>
-    New user? Sign-up:
+<h3
+ style=" text-align:center"> New user? Sign-up:
 </h3>
 <form action="./login_page.php" method="post">
     <link rel="stylesheet" href="ui_styles.css">
