--- a/login_form.html
+++ b/login_form.html
@@ -1,6 +1,5 @@
-<link rel="stylesheet" href="ui_styles.css">
-<h3
-style=" text-align:center"> Login:
+<h3>
+    Login:
 </h3>
 <form action="./login_page.php" method="post">
     <div class="username_input">
@@ -9,13 +8,12 @@ style=" text-align:center"> Login:
     </div>
     <div class="password_input">
         <label for="password">Password: </label><br>
-        <input type="password" id="password" name="password" required >
+        <input type="password" id="password" name="password" required>
     </div>
     <button type="submit">Login</button>
 </form>
-<br>
-<h3
- style=" text-align:center"> New user? Sign-up:
+<h3>
+    New user? Sign-up:
 </h3>
 <form action="./login_page.php" method="post">
     <div class="new_username_input">
@@ -23,16 +21,8 @@ style=" text-align:center"> Login:
         <input type="text" id="new_username" name="new_username" required>
     </div>
     <div class="new_password_input">
-        <input type="hidden" name="signedup" value="true">
         <label for="new_password">Password: </label><br>
         <input type="password" id="new_password" name="new_password" required>
     </div>
     <button type="submit">Sign-up</button>
 </form>
-
-    <div style="text-align:center; margin-top: 20px;">
-        <form action="./login_page.php" method="post">
-            <input type="hidden" name="guest" value="true">
-            <button type="submit" class="guest-button">Continue as Guest</button>
-        </form>
-    </div>
