--- a/start_interface.html
+++ b/start_interface.html
@@ -11,7 +11,7 @@
 <body>
     <h1 id="project_name">
         Budget Calculator <img class="logo" alt="money_logo" src="money_logo.jpg"><br>
-        <p>~ We Judge You For Your Purchases ~</p>
+        <p>~ We Judge Your Purchases For You ~</p>
     </h1>
 
     <form action="./budget_index.php" method="post">
